--- a/style/style.css
+++ b/style/style.css
@@ -86,8 +86,9 @@ ul li{
     max-width: 1120px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     align-items: center;
+    text-align: center;
     border: 1px solid rgb(222, 222, 222);
     border-radius: 8px;
     padding: 30px;
