--- a/style/style.css
+++ b/style/style.css
@@ -151,6 +151,7 @@ ul li{
   max-width: 500px;
   margin: 0 auto;
 }
+
 .hadding-text{
    font-size: 2.7rem;
 }
@@ -212,6 +213,9 @@ footer{
         flex-direction: column-reverse;
         text-align: center;
         gap: 50px;
+    }
+    .img-featured img{
+    width: 100%;
     }
     
 }
